# perspectiva-dados

./: .gitignore  Comandos_Base.ipynb  README.md  Tarefa2_PCD.ipynb  Teste Lab3.Rmd  UV_Teste.ipynb  pyproject.toml
Arquivos_Python_Lab3/: Comandos_Base.ipynb  pyproject.toml
PLN/: Untitled.ipynb  introducao_pln.ipynb
PLN/.ipynb_checkpoints/: PLN_Texto-checkpoint.ipynb  Untitled-checkpoint.ipynb  introducao_pln-checkpoint.ipynb
PLN/data/: noticias_games (2).csv
Revisao Python/: Tarefa1_PCD.ipynb
Webscrapping/: WebScrapping_Eurogamer (4).ipynb
