[project]
name = "Projeto_UV"
version = "0.1.0"
description = "Projeto usando UV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "tqdm>=4.67.3",
]
